--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,26 @@
 
     <properties>
         <project.version>0.1.0-SNAPSHOT</project.version>
-        <causeway.version>2.0.0-RC4</causeway.version>
+        <causeway.version>3.0.0</causeway.version>
         <stanford-corenlp.version>4.5.6</stanford-corenlp.version>
-        <lombok.version>1.18.30</lombok.version>
+        <lombok.version>1.18.32</lombok.version>
         <jmock.version>2.12.0</jmock.version>
         <file.encoding>UTF-8</file.encoding>
+        <kotlin.version>1.8.0</kotlin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <fuel.version>2.3.1</fuel.version>
+        <tika.version>2.9.1</tika.version>
+        <okhttp.version>4.12.0</okhttp.version>
+
+        <!-- PLUGIN -->
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     </properties>
 
     <parent>
         <groupId>org.apache.causeway.app</groupId>
         <artifactId>causeway-app-starter-parent</artifactId>
-        <version>2.0.0-RC4</version>
+        <version>3.0.0</version>
         <relativePath/>
     </parent>
 
@@ -51,23 +60,39 @@
     <dependencyManagement>
         <dependencies>
 
+            <dependency>
+                <groupId>org.apache.causeway.viewer</groupId>
+                <artifactId>causeway-viewer-restfulobjects-jaxrsresteasy</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
             <!-- this project's own modules -->
             <dependency>
                 <groupId>org.apache.causeway.domox</groupId>
-                <artifactId>domox-domain</artifactId>
+                <artifactId>domox-service</artifactId>
+                <version>${project.version}</version>
+                <!--exclusions>
+                    <exclusion>
+                        <artifactId>json</artifactId>
+                        <groupId>org.json</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>jaxb-impl</artifactId>
+                        <groupId>com.sun.xml.bind</groupId>
+                    </exclusion>
+                </exclusions--> <!-- manage exclusion via forcing to use the higher/highest version -->
             </dependency>
             <dependency>
                 <groupId>org.apache.causeway.domox</groupId>
                 <artifactId>domox-domain</artifactId>
                 <version>${project.version}</version>
-                <scope>test</scope>
-                <type>test-jar</type>
             </dependency>
             <dependency>
                 <groupId>org.apache.causeway.domox</groupId>
                 <artifactId>domox-webapp</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- used components -->
             <dependency>
                 <groupId>edu.stanford.nlp</groupId>
                 <artifactId>stanford-corenlp</artifactId>
@@ -83,6 +108,20 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+            </dependency>
+
+            <!-- test support -->
+            <dependency>
+                <groupId>com.tngtech.archunit</groupId>
+                <artifactId>archunit-junit5-api</artifactId>
+                <version>${archunit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.tngtech.archunit</groupId>
+                <artifactId>archunit-junit5-engine</artifactId>
+                <version>${archunit.version}</version>
+                <scope>test</scope>
             </dependency>
 
         </dependencies>
