app starts, alas without menu

--- a/domox-domain/src/main/resources/shiro.ini
+++ b/domox-domain/src/main/resources/shiro.ini
@@ -23,7 +23,7 @@ authenticationStrategy=org.apache.causeway.extensions.secman.shiro.Authenticatio
 CausewayModuleSecurityRealm=org.apache.causeway.extensions.secman.shiro.CausewayModuleExtSecmanShiroRealm
 
 securityManager.authenticator.authenticationStrategy = $authenticationStrategy
-securityManager.realms = $isisModuleSecurityRealm
+securityManager.realms = $causewayModuleSecurityRealm
 
 [users]
 [roles]
