--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <postgresql.version>42.7.2</postgresql.version>
         <jakarta.xml.bind-api.version>4.0.1</jakarta.xml.bind-api.version>
         <mockito-inline.version>3.11.2</mockito-inline.version>
+        <junit-jupiter.version>5.7.1</junit-jupiter.version>
 
         <!-- PLUGIN -->
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
@@ -144,7 +145,12 @@
                 <version>${mockito-inline.version}</version>
                 <scope>test</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>5.3.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
